--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -20,7 +20,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+		background: #fff;
+		color: #000;
   }
 }
