--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,7 +3,6 @@
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -12,4 +11,5 @@
   line-height: 1.15;
   font-size: 4rem;
 	text-align: center;
+	color: #000;
 }
